# adinmo-test

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
db/: Cargo.toml
db/src/: lib.rs  sql.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_number_table.rs  m20231125_142413_create_post_batch_table.rs
scripts/: sql_init.sql
src/: main.rs
src/adapters/: mod.rs  post_batch.rs  random_number.rs
src/entities/: mod.rs  post_batch.rs  prelude.rs  random_number.rs
src/libs/: error.rs  mod.rs  randomness.rs
src/tests/: mod.rs  run.rs
