[package]
name = "adinmo-test"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
env_logger = "0.10.1"
rand = {version = "0.8.5", features = ["small_rng"]}
reqwest = {version = "0.11.22", features = ["json"]}
sea-orm = { version = "^0.12.0", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }
serde = "1.0.193"
serde_json = "1.0.108"
tokio = "1.34.0"
futures = "0.3.28"
dotenv = "0.15.0"
db = { path="./db"}
log = "0.4.20"
httpmock = "0.6.8"
derive_more = "0.99.17"
