[package]
name = "migration"
version = "0.1.0"
edition = "2021"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "0.12.0"
features = [
  "sqlx-mysql", # `DATABASE_DRIVER` feature
  "runtime-tokio-rustls" # `ASYNC_RUNTIME` feature
]
